Add footer and footer top section

--- a/homepage.html
+++ b/homepage.html
@@ -3124,6 +3124,42 @@
         </articlr>
 
     </main>
+
+    <footer>
+        <div class="second-container">
+            <div class="container-footer-top">
+                <div class="container-footer-top__container-menus">
+                    <ul class="container-footer-menu">
+                        <h6>معرفی</h6>
+                        <li><a href="#" class="hover-color-green">درباره راست چین</a></li>
+                        <li><a href="#" class="hover-color-green">فرصت های شغلی</a></li>
+                        <li><a href="#" class="hover-color-green">اطلاعات تماس</a></li>
+                    </ul>
+                    <ul class="container-footer-menu">
+                        <h6>خدمات</h6>
+                        <li><a href="#" class="hover-color-green">ضمانت بازگشت وجه</a></li>
+                        <li><a href="#" class="hover-color-green">پشتیبانی سریع</a></li>
+                        <li><a href="#" class="hover-color-green">فروشنده شوید</a></li>
+                    </ul>
+                    <ul class="container-footer-menu">
+                        <h6>دسترسی سریع</h6>
+                        <li><a href="#" class="hover-color-green">وبلاگ راست چین</a></li>
+                        <li><a href="#" class="hover-color-green">افزونه مدیریت لایسنس</a></li>
+                        <li><a href="#" class="hover-color-green">آموزش نصب محصولات</a></li>
+                    </ul>
+                </div>
+                <div class="container-footer-top__total-container-left">
+                    <div class="container-footer-top__total-container-left__container-top">
+                        <p>پاسخگوی شما هستیم</p>
+                        <a href="#" class="hover-green">ارسال تیکت</a>
+                    </div>
+                    <div class="container-footer-top__total-container-left__container-bottom">
+                        <p>سوالات شما را در وبلاگ راست چین پاسخ دادیم</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
