Add footer bottom section

--- a/homepage.html
+++ b/homepage.html
@@ -3158,6 +3158,16 @@
                     </div>
                 </div>
             </div>
+
+            <div class="container-footer-bottom">
+                <p class="container-footer-bottom__description">
+                    ما در راست چین به شما کمک می کنیم کسب و کار آنلاین خودتان را با قالب های وردپرس، افزونه های کاربردی و اسکریپت های حرفه ای سریع، ساده و ارزان بسازید. برنامه نویسان راست چین تلاش می کنند راه اندازی وب سایت به یک تجربه حرفه ای از کیفیت و خدمات پشتیبانی تبدیل شود. مدرن ترین متدهای طراحی وب در قالب هزاران محصول آماده طراحی سایت هم اکنون در دسترس شماست.
+                </p>
+                <div class="container-footer-bottom__container-copy-right">
+                    <img src="./img/footer-logo.png" alt="">
+                    <p>تمامی حقوق برای سایت راست‌چین محفوظ است</p>
+                </div>
+            </div>
         </div>
     </footer>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
