Add footer mid & title & shortcut icon section

--- a/homepage.html
+++ b/homepage.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./homestyle.css">
     <link rel="stylesheet" href="./iran-sans-master/iran-sans.css">
+    <link rel="shortcut icon" href="./img/title-favicon.png">
     <script src="https://kit.fontawesome.com/d6898ed701.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>قالب وردپرس | خرید قالب وردپرس | راست چین</title>
 </head>
 <body>
     <header class="header">
@@ -3158,7 +3159,61 @@
                     </div>
                 </div>
             </div>
+            <div class="total-container-footer-mid">
+                <div class="container-footer__container-informations">
+                    <div class="container-footer__container-informations__container-products">
+                        <span>۶,۵۰۶</span>
+                        <span>محصول</span>
+                    </div>
+                    <div class="container-footer__container-informations__container-special-user">
+                        <span>۱۵۴,۱۹۷</span>
+                        <span>کاربر ویژه</span>
+                    </div>
+                    <div class="container-footer__container-informations__container-question-and-answer">
+                        <span>۱۸۹,۲۹۰</span>
+                        <span>پرسش و پاسخ</span>
+                    </div>
+                </div>
+                <div class="total-container-footer__container-communications">
+                    <h6>با ما همراه باشید</h6>
+                    <div class="container-footer__container-communications">
+                        <div class="container-footer__container-communication container-footer__container-communication--instagram">
+                            <a href="#">
+                                <i class="fa fa-instagram"></i>
+                                <span>اینستاگرام</span>    
+                            </a>
+                        </div>
 
+                        <div class="container-footer__container-communication container-footer__container-communication--telegram">
+                            <a href="#">
+                                <i class="fa fa-telegram"></i>
+                                <span>کانال تلگرام</span>
+                            </a>
+                        </div>
+
+                        <div class="container-footer__container-communication container-footer__container-communication--facebook">
+                            <a href="#">
+                                <i class="fa fa-facebook-f"></i>
+                            </a>
+                        </div>
+
+                        <div class="container-footer__container-communication container-footer__container-communication--twitter">
+                            <a href="#">
+                                <i class="fa fa-twitter"></i>
+                            </a>
+                        </div>
+
+                        <div class="container-footer__container-communication container-footer__container-communication--linkedin">
+                            <a href="#">
+                                <i class="fa fa-linkedin-square"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-footer-sama-img">
+                    <img src="./img/enamad-logo.png" alt="enamad-logo">
+                </div>
+            </div>
             <div class="container-footer-bottom">
                 <p class="container-footer-bottom__description">
                     ما در راست چین به شما کمک می کنیم کسب و کار آنلاین خودتان را با قالب های وردپرس، افزونه های کاربردی و اسکریپت های حرفه ای سریع، ساده و ارزان بسازید. برنامه نویسان راست چین تلاش می کنند راه اندازی وب سایت به یک تجربه حرفه ای از کیفیت و خدمات پشتیبانی تبدیل شود. مدرن ترین متدهای طراحی وب در قالب هزاران محصول آماده طراحی سایت هم اکنون در دسترس شماست.
@@ -3170,7 +3225,5 @@
             </div>
         </div>
     </footer>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
